--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,8 +1,7 @@
 .hero {
     height: 92vh;
     width: 100%;
-    background: linear-gradient(90deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.5) 100%),
-    url(../../img/hero.jpg);
+    background: linear-gradient(90deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.5) 100%), url(../img/hero.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
