Se agregaron animaciones y cambiaron colores - V2

--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -1,6 +1,6 @@
 .section__six {
     padding: 10px;
-    background-color: $color-terra;
+    background-color: #813B81;
     
     & h3 {
         padding: 2rem 0;
