--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -1,6 +1,6 @@
-$color-primary: #031634;
-$color-secondary: #033649;
-$color-terciary: #036564;
-$color-terra: #CDB380;
+$color-primary: #242444;
+$color-secondary: #606079;
+$color-terciary: #A3A3B4;
+$color-terra: #9D32CF;
 $color-white: #D8D8D8;
 $color-black: #303030;
