--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ html {
   grid-area: footer; }
 
 .header {
-  background-color: #031634;
+  background-color: #242444;
   padding: 0 20px; }
 
 .navbar {
@@ -64,9 +64,9 @@ html {
   align-items: center; }
   .menu .menu__link {
     padding: 1rem 1.5rem;
-    border-bottom: 1px solid #031634;
+    border-bottom: 1px solid #242444;
     font-size: 2em;
-    color: #CDB380;
+    color: #9D32CF;
     transition: all .3s ease-in-out;
     border-radius: 1rem; }
     .menu .menu__link:hover {
@@ -83,7 +83,7 @@ html {
     font-size: 1.2em; } }
 
 .footer {
-  background-color: #031634;
+  background-color: #242444;
   height: 20rem; }
 
 .foo {
@@ -98,8 +98,8 @@ html {
     font-weight: 700;
     padding: 5px 0; }
   .foo .foo__p {
-    font-size: 2em;
-    color: #CDB380;
+    font-size: 1.5em;
+    color: #9D32CF;
     padding: 5px 0;
     font-weight: 500; }
   .foo .foo__email {
@@ -114,7 +114,7 @@ html {
     transition: all .3s ease-in-out; }
     .foo .fa-brands:hover {
       transform: scale(1.2);
-      color: #CDB380; }
+      color: #9D32CF; }
 
 @media (max-width: 312px) {
   .foo .foo__email {
@@ -182,7 +182,7 @@ html {
       font-weight: 400;
       line-height: 1.5; }
       .section__two .information__texts .info__title--blue {
-        color: #036564;
+        color: #9D32CF;
         font-weight: 700; }
     .section__two .information__texts .info__paragraph {
       font-size: 2.5em;
@@ -206,13 +206,14 @@ html {
 
 .section__three {
   padding: 10px;
-  background-color: #036564; }
+  background-color: #242444; }
   .section__three .tecnologies {
     padding: 5px; }
     .section__three .tecnologies .tecnologies__title {
       padding: 2rem 0;
       font-size: 5em;
-      text-align: center; }
+      text-align: center;
+      color: #D8D8D8; }
   .section__three .tecnologies__container {
     padding: 15px;
     display: grid;
@@ -223,17 +224,17 @@ html {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); }
     .section__three .tecnologies__container .tecnologies__square {
       padding: 20px;
-      background-color: #033649;
+      background-color: #606079;
       border-radius: 10px;
       transition: all .3s ease-in-out;
-      border: 2px solid #033649;
+      border: 2px solid #606079;
       cursor: pointer; }
       .section__three .tecnologies__container .tecnologies__square:hover {
         transform: scale(1.1);
-        border: 2px solid #CDB380; }
+        border: 2px solid #9D32CF; }
       .section__three .tecnologies__container .tecnologies__square h4 {
         font-size: 2.5em;
-        color: #CDB380;
+        color: #D8D8D8;
         margin-top: 5px; }
       .section__three .tecnologies__container .tecnologies__square .tecnogies__logo {
         padding: 10px;
@@ -266,7 +267,7 @@ html {
     align-items: center;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); }
     .section__four .projects__container .projects {
-      background-color: #033649;
+      background-color: #242444;
       border-radius: 10px;
       text-align: center;
       padding: 10px; }
@@ -281,21 +282,22 @@ html {
       .section__four .projects__container .projects__texts h4 {
         font-size: 2.5em;
         padding-top: 10px;
-        color: #CDB380; }
+        color: #9D32CF; }
       .section__four .projects__container .projects__texts p {
         font-size: 1.8em;
         padding: 10px;
         color: #D8D8D8; }
       .section__four .projects__container .projects__texts a {
         display: inline-block;
-        color: #D8D8D8;
+        color: #9D32CF;
         font-size: 1.8em;
+        font-weight: 500;
         padding: 1.5rem 2.5rem;
-        background-color: #036564;
+        background-color: #D8D8D8;
         border-radius: 10px;
         transition: all .3s ease-in-out; }
         .section__four .projects__container .projects__texts a:hover {
-          background-color: #031634; }
+          background-color: #606079; }
 
 @media (max-width: 300px) {
   .section__four .projects__container {
@@ -312,7 +314,7 @@ html {
 
 .section__six {
   padding: 10px;
-  background-color: #CDB380; }
+  background-color: #813B81; }
   .section__six h3 {
     padding: 2rem 0;
     font-size: 5em;
@@ -335,10 +337,10 @@ html {
       font-size: 1.8em;
       outline: none;
       border: none;
-      border: 1px solid #036564;
+      border: 1px solid #A3A3B4;
       border-radius: 7px; }
       .section__six .form .form__input:focus {
-        border: 1px solid #036564; }
+        border: 1px solid #A3A3B4; }
     .section__six .form .form__input--message {
       padding: 50px;
       resize: none;
@@ -346,7 +348,7 @@ html {
       margin-bottom: 1em; }
   .section__six .form__cta {
     font-family: inherit;
-    background-color: #036564;
+    background-color: #A3A3B4;
     color: #fff;
     font-size: 2rem;
     border: none;
@@ -355,7 +357,7 @@ html {
     font-weight: 400;
     transition: all .3s ease-in-out; }
     .section__six .form__cta:hover {
-      background-color: #033649; }
+      background-color: #606079; }
 
 @media (max-width: 250px) {
   .section__six .form .form__input {
@@ -375,13 +377,13 @@ html {
 .btn {
   display: inline-block;
   padding: 1rem 2rem;
-  background-color: #033649;
-  color: #CDB380;
+  background-color: #606079;
+  color: #9D32CF;
   font-size: 2em;
   border-radius: 10px;
   transition: all .3s ease-in-out; }
   .btn:hover {
-    background-color: #031634; }
+    background-color: #242444; }
 
 @media (max-width: 300px) {
   .btn {
