--- a/sass/pages/_information.scss
+++ b/sass/pages/_information.scss
@@ -39,7 +39,7 @@
             line-height: 1.5;
     
             &--blue {
-                color: $color-terciary;
+                color: $color-terra;
                 font-weight: 700;
             } 
         }
