--- a/sass/pages/_projects.scss
+++ b/sass/pages/_projects.scss
@@ -18,7 +18,7 @@
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 
         .projects {
-            background-color: $color-secondary;
+            background-color: $color-primary;
             border-radius: 10px;
             text-align: center;
             padding: 10px;
@@ -49,15 +49,16 @@
 
             & a {
                 display: inline-block;
-                color: $color-white;
+                color: $color-terra;
                 font-size: 1.8em;
+                font-weight: 500;
                 padding: 1.5rem 2.5rem;
-                background-color: $color-terciary;
+                background-color: $color-white;
                 border-radius: 10px;
                 transition: all .3s ease-in-out;
 
                 &:hover {
-                    background-color: $color-primary;
+                    background-color: $color-secondary;
                 }
             }
         }
