--- a/sass/pages/_tecnologies.scss
+++ b/sass/pages/_tecnologies.scss
@@ -1,6 +1,6 @@
 .section__three {
     padding: 10px;
-    background-color: $color-terciary;
+    background-color: $color-primary;
 
     .tecnologies {
         padding: 5px;
@@ -9,6 +9,7 @@
             padding: 2rem 0;
             font-size: 5em;
             text-align: center;
+            color: $color-white;
         }
     }
 
@@ -36,7 +37,7 @@
 
             & h4 {
                 font-size: 2.5em;
-                color: $color-terra;
+                color: $color-white;
                 margin-top: 5px;
             }
 
