--- a/sass/pages/_tecnologies.scss
+++ b/sass/pages/_tecnologies.scss
@@ -1,3 +1,4 @@
+/* section tecnologies */
 .section__three {
     padding: 10px;
     background-color: $color-primary;
@@ -54,9 +55,27 @@
 
 }
 
-@media (max-width: 300px) {
+// @media (max-width: 300px) {
+//     .section__three .tecnologies__container {
+//         grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+//     }
+// }
+
+@media (max-width: 1000px) {
     .section__three .tecnologies__container {
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
+    }
+}
+
+@media (max-width: 580px) {
+    .section__three .tecnologies__container {
+        grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+    }
+}
+
+@media (max-width: 439px) {
+    .section__three .tecnologies__container {
+        grid-template-columns: repeat(auto-fill, minmax(18rem, 25rem));
     }
 }
 
