--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,6 @@
+/* google fonts */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&display=swap");
+/* variables */
 /* Reset */
 *,
 *::before,
@@ -20,8 +22,10 @@ body {
 html {
   font-size: 62.5%;
   font-family: 'Montserrat', sans-serif;
-  color: #D8D8D8; }
+  color: #D8D8D8;
+  scroll-behavior: smooth; }
 
+/* helpers */
 .container {
   max-width: 1080px;
   margin: 0 auto;
@@ -34,6 +38,36 @@ html {
   display: flex;
   flex-direction: column; }
 
+/* buttons */
+.btn {
+  display: inline-block;
+  padding: 1rem 2rem;
+  background-color: #242444;
+  color: #D8D8D8;
+  font-size: 2em;
+  border-radius: 10px;
+  border: 1px solid #9D32CF;
+  transition: all .3s ease-in-out; }
+  .btn:hover {
+    background-color: #606079; }
+
+@media (max-width: 300px) {
+  .btn {
+    padding: .8rem 1.5rem;
+    font-size: 1.5em; } }
+
+.gotopbtn {
+  position: fixed;
+  font-size: 5em;
+  bottom: 5rem;
+  right: 5rem; }
+
+@media (max-width: 514px) {
+  .gotopbtn {
+    bottom: 2rem;
+    right: 2rem; } }
+
+/* layout */
 .grid-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -49,6 +83,7 @@ html {
 .footer {
   grid-area: footer; }
 
+/* header */
 .header {
   background-color: #242444;
   padding: 0 20px; }
@@ -66,7 +101,7 @@ html {
     padding: 1rem 1.5rem;
     border-bottom: 1px solid #242444;
     font-size: 2em;
-    color: #9D32CF;
+    color: #D8D8D8;
     transition: all .3s ease-in-out;
     border-radius: 1rem; }
     .menu .menu__link:hover {
@@ -74,69 +109,28 @@ html {
       background-color: #D8D8D8;
       color: #303030; }
 
-@media (max-width: 514px) {
+@media (max-width: 700px) {
   .navbar {
     display: none; } }
 
-@media (max-width: 690px) {
-  .menu .menu__link {
-    font-size: 1.2em; } }
-
-.footer {
-  background-color: #242444;
-  height: 20rem; }
-
-.foo {
-  height: 20rem;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; }
-  .foo .foo__title {
-    font-size: 2.5em;
-    font-weight: 700;
-    padding: 5px 0; }
-  .foo .foo__p {
-    font-size: 1.5em;
-    color: #9D32CF;
-    padding: 5px 0;
-    font-weight: 500; }
-  .foo .foo__email {
-    font-size: 2em;
-    padding: 5px 0; }
-  .foo span {
-    padding-right: 10px; }
-  .foo .fa-brands {
-    color: #D8D8D8;
-    padding: 10px;
-    font-size: 5em;
-    transition: all .3s ease-in-out; }
-    .foo .fa-brands:hover {
-      transform: scale(1.2);
-      color: #9D32CF; }
-
-@media (max-width: 312px) {
-  .foo .foo__email {
-    font-size: 1.3em; } }
-
+/* section home*/
 .hero {
   height: 92vh;
   width: 100%;
-  background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url(../img/hero.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url(../img/hero.jpg) no-repeat center;
   background-size: cover;
-  padding: 0 20px; }
+  background-attachment: fixed; }
   .hero .hero__texts {
     height: 92vh;
     width: 100%;
     justify-content: center;
-    align-items: flex-start; }
+    align-items: flex-start;
+    padding: 0 2rem; }
     .hero .hero__texts h1 {
       font-size: 6em; }
     .hero .hero__texts p {
-      font-size: 5em; }
+      font-size: 5em;
+      margin-bottom: 1rem; }
 
 @media (max-width: 380px) {
   .hero .hero__texts h1 {
@@ -144,15 +138,15 @@ html {
   .hero .hero__texts p {
     font-size: 3em; } }
 
-@media (max-width: 514px) {
+@media (max-width: 700px) {
   .hero {
     height: 100vh; }
     .hero .hero__texts {
       height: 100vh; } }
 
+/* section information */
 .section__two {
   padding: 10px;
-  background-color: #f2f2f2;
   justify-content: center;
   align-items: center; }
   .section__two .section__two-title {
@@ -169,9 +163,7 @@ html {
     padding: 10px;
     height: 250px;
     width: 250px;
-    border-radius: 50%;
-    object-fit: cover;
-    object-position: center; }
+    border-radius: 50%; }
   .section__two .information__texts {
     color: #303030;
     flex-basis: 70%;
@@ -204,6 +196,7 @@ html {
     font-size: 2em;
     line-height: 1.7; } }
 
+/* section tecnologies */
 .section__three {
   padding: 10px;
   background-color: #242444; }
@@ -243,19 +236,27 @@ html {
         object-fit: contain;
         object-position: center; }
 
-@media (max-width: 300px) {
+@media (max-width: 1000px) {
   .section__three .tecnologies__container {
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); } }
+    grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr)); } }
+
+@media (max-width: 580px) {
+  .section__three .tecnologies__container {
+    grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr)); } }
+
+@media (max-width: 439px) {
+  .section__three .tecnologies__container {
+    grid-template-columns: repeat(auto-fill, minmax(18rem, 25rem)); } }
 
 @media (max-width: 380px) {
   .section__three .tecnologies .tecnologies__title {
     font-size: 3em; } }
 
+/* section projects */
 .section__four {
-  padding: 10px;
-  background-color: #f2f2f2; }
+  padding: 10px; }
   .section__four h3 {
-    padding: 2rem 0;
+    padding: 2rem;
     font-size: 5em;
     color: #303030; }
   .section__four .projects__container {
@@ -265,7 +266,7 @@ html {
     text-align: center;
     justify-content: center;
     align-items: center;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); }
+    grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr)); }
     .section__four .projects__container .projects {
       background-color: #242444;
       border-radius: 10px;
@@ -295,23 +296,16 @@ html {
         padding: 1.5rem 2.5rem;
         background-color: #D8D8D8;
         border-radius: 10px;
+        border: 1px solid #9D32CF;
         transition: all .3s ease-in-out; }
         .section__four .projects__container .projects__texts a:hover {
           background-color: #606079; }
 
-@media (max-width: 300px) {
-  .section__four .projects__container {
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); }
-  .section__four .projects__container .projects .projects__img {
-    height: 150px;
-    width: 150px; } }
-
 @media (max-width: 380px) {
   .section__four h3 {
-    font-size: 3em; }
-  .section__four p {
-    font-size: 1.8em; } }
+    font-size: 3rem; } }
 
+/* section contact */
 .section__six {
   padding: 10px;
   background-color: #813B81; }
@@ -325,8 +319,8 @@ html {
     align-items: center;
     gap: 10px; }
     .section__six .form__container .form__img {
-      height: 450px;
-      width: 450px; }
+      width: 100%;
+      max-width: 35rem; }
   .section__six .form {
     padding: 10px;
     display: grid;
@@ -353,6 +347,7 @@ html {
     font-size: 2rem;
     border: none;
     border-radius: 5px;
+    border: 1px solid #9D32CF;
     cursor: pointer;
     font-weight: 400;
     transition: all .3s ease-in-out; }
@@ -374,18 +369,41 @@ html {
   .form__img {
     display: none; } }
 
-.btn {
-  display: inline-block;
-  padding: 1rem 2rem;
-  background-color: #606079;
-  color: #9D32CF;
-  font-size: 2em;
-  border-radius: 10px;
-  transition: all .3s ease-in-out; }
-  .btn:hover {
-    background-color: #242444; }
+/* footer */
+.footer {
+  background-color: #242444;
+  height: 20rem; }
 
-@media (max-width: 300px) {
-  .btn {
-    padding: .8rem 1.5rem;
-    font-size: 1.5em; } }
+.foo {
+  height: 20rem;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .foo .foo__title {
+    font-size: 2.5em;
+    font-weight: 700;
+    padding: 5px 0; }
+  .foo .foo__p {
+    font-size: 1.5em;
+    color: #9D32CF;
+    padding: 5px 0;
+    font-weight: 500; }
+  .foo .foo__email {
+    font-size: 2em;
+    padding: 5px 0; }
+  .foo span {
+    padding-right: 10px; }
+  .foo .fa-brands {
+    color: #D8D8D8;
+    padding: 10px;
+    font-size: 5em;
+    transition: all .3s ease-in-out; }
+    .foo .fa-brands:hover {
+      transform: scale(1.2);
+      color: #9D32CF; }
+
+@media (max-width: 312px) {
+  .foo .foo__email {
+    font-size: 1.3em; } }
