--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -5,7 +5,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    // overflow: hidden;
 }
 
 ul {
@@ -19,9 +18,11 @@ a {
 body {
     min-height: 100vh;
 }
+
 /* Globals */
 html {
     font-size: 62.5%;
     font-family: 'Montserrat', sans-serif;
     color: $color-white;
+    scroll-behavior: smooth;
 }
