--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -1,3 +1,4 @@
+/* section contact */
 .section__six {
     padding: 10px;
     background-color: #813B81;
@@ -15,8 +16,8 @@
         gap: 10px;
 
         .form__img {
-            height: 450px;
-            width: 450px;
+            width: 100%;
+            max-width: 35rem;
         }
     }
 
@@ -56,6 +57,7 @@
         font-size: 2rem;
         border: none;
         border-radius: 5px;
+        border: 1px solid $color-terra;
         cursor: pointer;
         font-weight: 400;
         transition: all .3s ease-in-out;
