--- a/sass/pages/_information.scss
+++ b/sass/pages/_information.scss
@@ -1,6 +1,6 @@
+/* section information */
 .section__two {
     padding: 10px;
-    background-color: #f2f2f2;
     justify-content: center;
     align-items: center;
     
@@ -23,8 +23,6 @@
         height: 250px;
         width: 250px;
         border-radius: 50%;
-        object-fit: cover;
-        object-position: center;
     }
     
     .information__texts {
