--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,9 +2,11 @@
 .hero {
     height: 92vh;
     width: 100%;
-    background: linear-gradient(90deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.5) 100%), url(../img/hero.jpg) no-repeat center;
+    background: linear-gradient(90deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.5) 100%), url(../img/hero.jpg);
     background-size: cover;
     background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
 
     .hero__texts {
         height: 92vh;
