--- a/css/main.css
+++ b/css/main.css
@@ -39,21 +39,21 @@ html {
   flex-direction: column; }
 
 /* buttons */
-.btn {
+.btn, .section__four .projects__container .projects__texts a {
   display: inline-block;
   padding: 1rem 2rem;
   background-color: #242444;
   color: #D8D8D8;
   font-size: 2em;
-  border-radius: 10px;
+  border-radius: 1rem;
   border: 1px solid #9D32CF;
   transition: all .3s ease-in-out; }
-  .btn:hover {
+  .btn:hover, .section__four .projects__container .projects__texts a:hover {
     background-color: #606079; }
 
 @media (max-width: 300px) {
-  .btn {
-    padding: .8rem 1.5rem;
+  .btn, .section__four .projects__container .projects__texts a {
+    padding: 1rem 1.5rem;
     font-size: 1.5em; } }
 
 .gotopbtn {
@@ -86,7 +86,7 @@ html {
 /* header */
 .header {
   background-color: #242444;
-  padding: 0 20px; }
+  padding: 0 2rem; }
 
 .navbar {
   height: 8rem;
@@ -94,34 +94,36 @@ html {
   justify-content: center; }
 
 .menu {
-  gap: 15px;
+  gap: 1.5rem;
   justify-content: center;
   align-items: center; }
   .menu .menu__link {
     padding: 1rem 1.5rem;
-    border-bottom: 1px solid #242444;
+    border: 1px solid #242444;
     font-size: 2em;
     color: #D8D8D8;
     transition: all .3s ease-in-out;
     border-radius: 1rem; }
     .menu .menu__link:hover {
-      border-bottom: 1px solid #D8D8D8;
+      border: 1px solid #9D32CF;
       background-color: #D8D8D8;
       color: #303030; }
 
-@media (max-width: 700px) {
+@media (max-width: 712px) {
   .navbar {
     display: none; } }
 
 /* section home*/
 .hero {
-  height: 92vh;
+  height: 100vh;
   width: 100%;
-  background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url(../img/hero.jpg) no-repeat center;
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.7) 100%), url(../img/hero.jpg);
   background-size: cover;
-  background-attachment: fixed; }
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat; }
   .hero .hero__texts {
-    height: 92vh;
+    height: 90vh;
     width: 100%;
     justify-content: center;
     align-items: flex-start;
@@ -129,8 +131,10 @@ html {
     .hero .hero__texts h1 {
       font-size: 6em; }
     .hero .hero__texts p {
-      font-size: 5em;
-      margin-bottom: 1rem; }
+      font-size: 4em;
+      margin-bottom: 1rem;
+      color: #9D32CF;
+      font-weight: 500; }
 
 @media (max-width: 380px) {
   .hero .hero__texts h1 {
@@ -138,31 +142,25 @@ html {
   .hero .hero__texts p {
     font-size: 3em; } }
 
-@media (max-width: 700px) {
-  .hero {
-    height: 100vh; }
-    .hero .hero__texts {
-      height: 100vh; } }
-
 /* section information */
 .section__two {
-  padding: 10px;
+  padding: 1rem;
   justify-content: center;
   align-items: center; }
   .section__two .section__two-title {
     color: #303030;
     font-size: 5em;
     text-align: center;
-    padding: 2rem 0; }
+    padding: 2rem; }
   .section__two .information {
     flex-basis: 30%;
     justify-content: center;
     align-items: center;
-    gap: 0 20px; }
+    gap: 0 2rem; }
   .section__two .info__img {
-    padding: 10px;
-    height: 250px;
-    width: 250px;
+    padding: 1rem;
+    height: 25rem;
+    width: 25rem;
     border-radius: 50%; }
   .section__two .information__texts {
     color: #303030;
@@ -198,27 +196,26 @@ html {
 
 /* section tecnologies */
 .section__three {
-  padding: 10px;
+  padding: 1rem;
   background-color: #242444; }
   .section__three .tecnologies {
-    padding: 5px; }
+    padding: .5rem; }
     .section__three .tecnologies .tecnologies__title {
-      padding: 2rem 0;
+      padding: 2rem;
       font-size: 5em;
-      text-align: center;
       color: #D8D8D8; }
   .section__three .tecnologies__container {
-    padding: 15px;
+    padding: 1.5rem;
     display: grid;
-    gap: 20px;
+    gap: 2rem;
     text-align: center;
     justify-content: center;
     align-items: center;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); }
+    grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr)); }
     .section__three .tecnologies__container .tecnologies__square {
-      padding: 20px;
+      padding: 2rem;
       background-color: #606079;
-      border-radius: 10px;
+      border-radius: 1rem;
       transition: all .3s ease-in-out;
       border: 2px solid #606079;
       cursor: pointer; }
@@ -228,11 +225,11 @@ html {
       .section__three .tecnologies__container .tecnologies__square h4 {
         font-size: 2.5em;
         color: #D8D8D8;
-        margin-top: 5px; }
+        margin-top: .5rem; }
       .section__three .tecnologies__container .tecnologies__square .tecnogies__logo {
-        padding: 10px;
-        height: 150px;
-        width: 150px;
+        padding: 1rem;
+        height: 15rem;
+        width: 15rem;
         object-fit: contain;
         object-position: center; }
 
@@ -254,27 +251,28 @@ html {
 
 /* section projects */
 .section__four {
-  padding: 10px; }
+  padding: 1rem; }
   .section__four h3 {
     padding: 2rem;
     font-size: 5em;
+    text-align: end;
     color: #303030; }
   .section__four .projects__container {
-    padding: 15px;
+    padding: 1.5rem;
     display: grid;
-    gap: 20px;
+    gap: 2rem;
     text-align: center;
     justify-content: center;
     align-items: center;
-    grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr)); }
+    grid-template-columns: repeat(auto-fill, minmax(30rem, 32rem)); }
     .section__four .projects__container .projects {
       background-color: #242444;
-      border-radius: 10px;
+      border-radius: 1rem;
       text-align: center;
-      padding: 10px; }
+      padding: 1rem; }
       .section__four .projects__container .projects .projects__img {
-        height: 200px;
-        width: 200px;
+        height: 20rem;
+        width: 20rem;
         border-radius: 50%;
         object-fit: cover;
         object-position: center; }
@@ -282,24 +280,16 @@ html {
       color: #303030; }
       .section__four .projects__container .projects__texts h4 {
         font-size: 2.5em;
-        padding-top: 10px;
+        padding-top: 1rem;
         color: #9D32CF; }
       .section__four .projects__container .projects__texts p {
         font-size: 1.8em;
-        padding: 10px;
+        padding: 1rem;
         color: #D8D8D8; }
-      .section__four .projects__container .projects__texts a {
-        display: inline-block;
-        color: #9D32CF;
-        font-size: 1.8em;
-        font-weight: 500;
-        padding: 1.5rem 2.5rem;
-        background-color: #D8D8D8;
-        border-radius: 10px;
-        border: 1px solid #9D32CF;
-        transition: all .3s ease-in-out; }
-        .section__four .projects__container .projects__texts a:hover {
-          background-color: #606079; }
+
+@media (max-width: 300px) {
+  .section__four .projects__container {
+    grid-template-columns: repeat(auto-fill, minmax(25rem, 32rem)); } }
 
 @media (max-width: 380px) {
   .section__four h3 {
@@ -307,46 +297,51 @@ html {
 
 /* section contact */
 .section__six {
-  padding: 10px;
+  padding: 1.1rem;
   background-color: #813B81; }
   .section__six h3 {
-    padding: 2rem 0;
+    padding: 2rem;
     font-size: 5em;
+    text-align: center;
     color: #303030; }
   .section__six .form__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 10px; }
+    gap: 1rem; }
     .section__six .form__container .form__img {
       width: 100%;
       max-width: 35rem; }
   .section__six .form {
-    padding: 10px;
+    padding: 1rem;
     display: grid;
     width: 40rem;
     height: 40rem;
-    gap: 10px; }
+    gap: 1rem; }
     .section__six .form .form__input {
       font-size: 1.8em;
+      padding: 0 1rem;
       outline: none;
       border: none;
       border: 1px solid #A3A3B4;
-      border-radius: 7px; }
+      border-radius: 1rem; }
       .section__six .form .form__input:focus {
         border: 1px solid #A3A3B4; }
     .section__six .form .form__input--message {
-      padding: 50px;
+      padding: 5rem;
       resize: none;
       padding: 2.8em 1.5em;
-      margin-bottom: 1em; }
+      margin-bottom: 1em;
+      font-size: 1.8em; }
+      .section__six .form .form__input--message:focus-visible {
+        outline: 0; }
   .section__six .form__cta {
     font-family: inherit;
     background-color: #A3A3B4;
     color: #fff;
     font-size: 2rem;
     border: none;
-    border-radius: 5px;
+    border-radius: .5rem;
     border: 1px solid #9D32CF;
     cursor: pointer;
     font-weight: 400;
@@ -376,7 +371,7 @@ html {
 
 .foo {
   height: 20rem;
-  padding: 10px;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -384,26 +379,26 @@ html {
   .foo .foo__title {
     font-size: 2.5em;
     font-weight: 700;
-    padding: 5px 0; }
+    padding: .5rem 0; }
   .foo .foo__p {
     font-size: 1.5em;
     color: #9D32CF;
-    padding: 5px 0;
+    padding: .5rem 0;
     font-weight: 500; }
   .foo .foo__email {
     font-size: 2em;
-    padding: 5px 0; }
+    padding: .5rem 0; }
   .foo span {
-    padding-right: 10px; }
+    padding-right: 1rem; }
   .foo .fa-brands {
     color: #D8D8D8;
-    padding: 10px;
+    padding: 1rem;
     font-size: 5em;
     transition: all .3s ease-in-out; }
     .foo .fa-brands:hover {
       transform: scale(1.2);
       color: #9D32CF; }
 
-@media (max-width: 312px) {
+@media (max-width: 380px) {
   .foo .foo__email {
     font-size: 1.3em; } }
