--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,15 +1,15 @@
 /* section home*/
 .hero {
-    height: 92vh;
+    height: 100vh;
     width: 100%;
-    background: linear-gradient(90deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.5) 100%), url(../img/hero.jpg);
+    background: linear-gradient(90deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.7) 100%), url(../img/hero.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
 
     .hero__texts {
-        height: 92vh;
+        height: 90vh;
         width: 100%;
         justify-content: center;
         align-items: flex-start;
@@ -20,8 +20,10 @@
         }
         
         & p {
-            font-size: 5em;
+            font-size: 4em;
             margin-bottom: 1rem;
+            color: $color-terra;
+            font-weight: 500;
         }
 
     }
@@ -35,15 +37,4 @@
     .hero .hero__texts p {
         font-size: 3em;
     }
-}
-
-@media (max-width: 700px) {
-    .hero {
-        height: 100vh;
-        
-        .hero__texts {
-            height: 100vh;
-        }
-    }
-    
 }
