--- a/sass/pages/_projects.scss
+++ b/sass/pages/_projects.scss
@@ -1,31 +1,32 @@
 /* section projects */
 .section__four {
-    padding: 10px;
+    padding: 1rem;
 
     & h3 {
         padding: 2rem;
         font-size: 5em;
+        text-align: end;
         color: $color-black;
     }
 
     .projects__container {
-        padding: 15px;
+        padding: 1.5rem;
         display: grid;
-        gap: 20px;
+        gap: 2rem;
         text-align: center;
         justify-content: center;
         align-items: center;
-        grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(30rem, 32rem));
 
         .projects {
             background-color: $color-primary;
-            border-radius: 10px;
+            border-radius: 1rem;
             text-align: center;
-            padding: 10px;
+            padding: 1rem;
 
             .projects__img {
-                height: 200px;
-                width: 200px;
+                height: 20rem;
+                width: 20rem;
                 border-radius: 50%;
                 object-fit: cover;
                 object-position: center;
@@ -37,32 +38,26 @@
 
             & h4 {
                 font-size: 2.5em;
-                padding-top: 10px;
+                padding-top: 1rem;
                 color: $color-terra;
             }
 
             & p {
                 font-size: 1.8em;
-                padding: 10px;
+                padding: 1rem;
                 color: $color-white;
             }
 
             & a {
-                display: inline-block;
-                color: $color-terra;
-                font-size: 1.8em;
-                font-weight: 500;
-                padding: 1.5rem 2.5rem;
-                background-color: $color-white;
-                border-radius: 10px;
-                border: 1px solid $color-terra;
-                transition: all .3s ease-in-out;
-
-                &:hover {
-                    background-color: $color-secondary;
-                }
+                @extend .btn;
             }
         }
+    }
+}
+
+@media (max-width: 300px) {
+    .section__four .projects__container {
+        grid-template-columns: repeat(auto-fill, minmax(25rem, 32rem));
     }
 }
 
