--- a/sass/pages/_tecnologies.scss
+++ b/sass/pages/_tecnologies.scss
@@ -1,32 +1,31 @@
 /* section tecnologies */
 .section__three {
-    padding: 10px;
+    padding: 1rem;
     background-color: $color-primary;
 
     .tecnologies {
-        padding: 5px;
+        padding: .5rem;
         
         .tecnologies__title {
-            padding: 2rem 0;
+            padding: 2rem;
             font-size: 5em;
-            text-align: center;
             color: $color-white;
         }
     }
 
     .tecnologies__container {
-        padding: 15px;
+        padding: 1.5rem;
         display: grid;
-        gap: 20px;
+        gap: 2rem;
         text-align: center;
         justify-content: center;
         align-items: center;
-        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
 
         .tecnologies__square {
-            padding: 20px;
+            padding: 2rem;
             background-color: $color-secondary;
-            border-radius: 10px;
+            border-radius: 1rem;
             transition: all .3s ease-in-out;
             border: 2px solid $color-secondary;
             cursor: pointer;
@@ -39,13 +38,13 @@
             & h4 {
                 font-size: 2.5em;
                 color: $color-white;
-                margin-top: 5px;
+                margin-top: .5rem;
             }
 
             .tecnogies__logo {
-                padding: 10px;
-                height: 150px;
-                width: 150px;
+                padding: 1rem;
+                height: 15rem;
+                width: 15rem;
                 object-fit: contain;
                 object-position: center;
             }
