--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -6,7 +6,7 @@
 
 .foo {
     height: 20rem;
-    padding: 10px;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,28 +15,28 @@
     .foo__title {
         font-size: 2.5em;
         font-weight: 700;
-        padding: 5px 0;
+        padding: .5rem 0;
     }
 
     .foo__p {
         font-size: 1.5em;
         color: $color-terra;
-        padding: 5px 0;
+        padding: .5rem 0;
         font-weight: 500;
     }
 
     .foo__email {
         font-size: 2em;
-        padding: 5px 0;
+        padding: .5rem 0;
     }
 
     span {
-        padding-right: 10px;
+        padding-right: 1rem;
     }
 
     & .fa-brands {
         color: $color-white;
-        padding: 10px;
+        padding: 1rem;
         font-size: 5em;
         transition: all .3s ease-in-out;
 
@@ -47,7 +47,7 @@
     }
 }
 
-@media (max-width: 312px) {
+@media (max-width: 380px) {
     .foo .foo__email {
         font-size: 1.3em;
     }
