--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -16,8 +16,8 @@
 
 @media (max-width: 300px) {
     .btn {
-        padding: 1rem 1.5rem;
-        font-size: 1.5em;
+        padding: .8rem 1.5rem;
+        font-size: 1.4em;
     }
 }
 
