--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -26,6 +26,11 @@
             font-weight: 500;
         }
 
+        .hero__buttons {
+            display: flex;
+            column-gap: 1rem;
+        }
+
     }
 }
 
@@ -36,5 +41,9 @@
 
     .hero .hero__texts p {
         font-size: 3em;
+    }
+
+    .btn {
+        font-size: 1.5em;
     }
 }
