--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -116,6 +116,11 @@
         width: 40rem;
         height: 40rem;
     }
+
+    .gohome {
+        bottom: 2rem;
+        right: 2rem;
+    }
 }
 
 @media (max-width: 380px) {
