--- a/views/contact.html
+++ b/views/contact.html
@@ -57,7 +57,7 @@
                                 name="message"></textarea>
                             <input type="submit" class="form__cta">
                         </form>
-                        <img src="../img/hand_coding.svg" alt="Foto de laptop" class="form__img">
+                        <img src="../img/hand_coding.svg" alt="Foto de laptop" class="form__img" loading="eager">
                     </div>
                 </div>
             </div>
