--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,6 @@ html {
   width: 100%;
   background: linear-gradient(90deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.7) 100%), url(../img/hero.jpg);
   background-size: cover;
-  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat; }
   .hero .hero__texts {
@@ -384,7 +383,10 @@ html {
 @media (max-width: 514px) {
   .section__six .form {
     width: 40rem;
-    height: 40rem; } }
+    height: 40rem; }
+  .gohome {
+    bottom: 2rem;
+    right: 2rem; } }
 
 @media (max-width: 380px) {
   .section__six h3 {
