--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,10 @@ html {
   position: fixed;
   font-size: 5em;
   bottom: 5rem;
-  right: 5rem; }
+  right: 5rem;
+  transition: transform .3s ease-in-out; }
+  .gotopbtn:hover {
+    transform: scale(1.1); }
 
 @media (max-width: 514px) {
   .gotopbtn {
@@ -241,6 +244,10 @@ html {
   .section__three .tecnologies__container {
     grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr)); } }
 
+@media (max-width: 640px) {
+  .section__three .tecnologies .tecnologies__title {
+    text-align: center; } }
+
 @media (max-width: 580px) {
   .section__three .tecnologies__container {
     grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr)); } }
@@ -298,6 +305,10 @@ html {
 @media (max-width: 380px) {
   .section__four h3 {
     font-size: 3rem; } }
+
+@media (max-width: 640px) {
+  .section__four h3 {
+    text-align: center; } }
 
 /* section contact pages*/
 .section__six {
@@ -365,7 +376,10 @@ html {
   position: fixed;
   font-size: 5em;
   bottom: 5rem;
-  right: 5rem; }
+  right: 5rem;
+  transition: transform .3s ease-in-out; }
+  .gohome:hover {
+    transform: scale(1.1); }
 
 @media (max-width: 920px) {
   .section__six .formulario__container .form__content {
@@ -386,7 +400,8 @@ html {
     height: 40rem; }
   .gohome {
     bottom: 2rem;
-    right: 2rem; } }
+    right: 2rem;
+    transition: transform .3s ease-in-out; } }
 
 @media (max-width: 380px) {
   .section__six h3 {
