--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -26,6 +26,11 @@
     font-size: 5em;
     bottom: 5rem;
     right: 5rem;
+    transition: transform .3s ease-in-out;
+
+    &:hover {
+        transform: scale(1.1);
+    }
 }
 
 @media (max-width: 514px) {
