--- a/views/contact.html
+++ b/views/contact.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="../css/main.css">
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <!-- AOS ANIMATION -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -47,7 +49,7 @@
     <main class="main">
         <section class="section__six">
             <div class="container">
-                <div class="formulario__container">
+                <div class="formulario__container" data-aos="fade-right" data-aos-duration="800" data-aos-easing="ease-in-sine" data-aos-easing="linear">
                     <h3 id="contact">Contactame</h3>
                     <div class="form__content">
                         <form class="form" action="https://formspree.io/f/xdobpnbv" method="POST">
@@ -68,7 +70,7 @@
     <!-- FOOTER -->
     <footer class="footer">
         <div class="container">
-            <div class="foo">
+            <div class="foo" data-aos="zoom-out-up" data-aos-duration="500" data-aos-easing="ease-in-sine" data-aos-easing="linear">
                 <h5 class="foo__title">Lucas Barria</h5>
                 <p class="foo__p">Desarollador Front-End</p>
                 <p class="foo__email"><span class="fa-solid fa-envelope"></span>lucasbnicolas@gmail.com</p>
@@ -80,4 +82,10 @@
             </div>
         </div>
     </footer>
+
+    <!-- AOS ANIMATION -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
