--- a/sass/pages/_information.scss
+++ b/sass/pages/_information.scss
@@ -6,7 +6,7 @@
     
     .section__two-title {
         color: $color-black;
-        font-size: 5em;
+        font-size: $font-title;
         text-align: center;
         padding: 2rem;
     }
