--- a/views/contact.html
+++ b/views/contact.html
@@ -46,21 +46,21 @@
         </div>
     </header>
 
+    <!-- MAIN -->
     <main class="main">
-        <section class="section__six">
+        <section class="section__contact">
             <div class="container">
-                <div class="formulario__container" data-aos="fade-right" data-aos-duration="800" data-aos-easing="ease-in-sine" data-aos-easing="linear">
-                    <h3 id="contact">Contactame</h3>
-                    <div class="form__content">
-                        <form class="form" action="https://formspree.io/f/xdobpnbv" method="POST">
-                            <input type="text" placeholder="Nombre*" class="form__input" name="name">
-                            <input type="email" placeholder="Email*" class="form__input" name="email">
-                            <textarea class="form__input--message" placeholder="Escribe el mensaje aqui*"
-                                name="message"></textarea>
-                            <input type="submit" class="form__cta">
-                        </form>
-                        <img src="../img/hand_coding.svg" alt="Foto de laptop" class="form__img" loading="eager">
-                    </div>
+                <div class="form__position flex-row" data-aos="fade-right" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-easing="linear">
+                    <form class="form">
+                        <div class="form__container">
+                            <h2 class="form__title">Contáctame</h2>
+                            <input type="text" class="form__input" placeholder="Nombre:">
+                            <input type="email" class="form__input" placeholder="Correo electronico:">
+                            <textarea class="form__message" placeholder="Mensaje:"></textarea>
+    
+                            <input type="submit" value="Enviar" class="form__cta">
+                        </div>
+                    </form>
                 </div>
             </div>
         </section>
@@ -70,7 +70,8 @@
     <!-- FOOTER -->
     <footer class="footer">
         <div class="container">
-            <div class="foo" data-aos="zoom-out-up" data-aos-duration="500" data-aos-easing="ease-in-sine" data-aos-easing="linear">
+            <div class="foo" data-aos="zoom-out-up" data-aos-duration="500" data-aos-easing="ease-in-sine"
+                data-aos-easing="linear">
                 <h5 class="foo__title">Lucas Barria</h5>
                 <p class="foo__p">Desarollador Front-End</p>
                 <p class="foo__email"><span class="fa-solid fa-envelope"></span>lucasbnicolas@gmail.com</p>
