--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-/* google fonts */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&display=swap");
 /* variables */
 /* Reset */
@@ -38,38 +37,6 @@ html {
   display: flex;
   flex-direction: column; }
 
-/* buttons */
-.btn, .section__four .projects__container .projects__texts a {
-  display: inline-block;
-  padding: 1rem 2rem;
-  background-color: #242444;
-  color: #D8D8D8;
-  font-size: 2em;
-  border-radius: 1rem;
-  border: 1px solid #9D32CF;
-  transition: all .3s ease-in-out; }
-  .btn:hover, .section__four .projects__container .projects__texts a:hover {
-    background-color: #606079; }
-
-@media (max-width: 300px) {
-  .btn, .section__four .projects__container .projects__texts a {
-    padding: .8rem 1.5rem;
-    font-size: 1.4em; } }
-
-.gotopbtn {
-  position: fixed;
-  font-size: 5em;
-  bottom: 5rem;
-  right: 5rem;
-  transition: transform .3s ease-in-out; }
-  .gotopbtn:hover {
-    transform: scale(1.1); }
-
-@media (max-width: 514px) {
-  .gotopbtn {
-    bottom: 2rem;
-    right: 2rem; } }
-
 /* layout */
 .grid-container {
   display: grid;
@@ -85,6 +52,40 @@ html {
 
 .footer {
   grid-area: footer; }
+
+/* buttons */
+.btn, .section__four .projects__container .projects__texts a, .section__contact .form__position .form .form__container .form__cta {
+  display: inline-block;
+  cursor: pointer;
+  padding: 1rem 2rem;
+  background-color: #242444;
+  color: #D8D8D8;
+  font-size: 2em;
+  border-radius: 1rem;
+  border: 1px solid #9D32CF;
+  transition: all .3s ease-in-out; }
+  .btn:hover, .section__four .projects__container .projects__texts a:hover, .section__contact .form__position .form .form__container .form__cta:hover {
+    background-color: #606079; }
+
+@media (max-width: 300px) {
+  .btn, .section__four .projects__container .projects__texts a, .section__contact .form__position .form .form__container .form__cta {
+    padding: .8rem 1.5rem;
+    font-size: 1.4em; } }
+
+.gotopbtn, .gohome {
+  position: fixed;
+  font-size: 5em;
+  bottom: 5rem;
+  right: 5rem;
+  z-index: 1;
+  transition: transform .3s ease-in-out; }
+  .gotopbtn:hover, .gohome:hover {
+    transform: scale(1.1); }
+
+@media (max-width: 514px) {
+  .gotopbtn, .gohome {
+    bottom: 2rem;
+    right: 2rem; } }
 
 /* header */
 .header {
@@ -146,7 +147,7 @@ html {
     font-size: 4em; }
   .hero .hero__texts p {
     font-size: 3em; }
-  .btn, .section__four .projects__container .projects__texts a {
+  .btn, .section__four .projects__container .projects__texts a, .section__contact .form__position .form .form__container .form__cta {
     font-size: 1.5em; } }
 
 /* section information */
@@ -311,119 +312,53 @@ html {
     text-align: center; } }
 
 /* section contact pages*/
-.section__six {
+.section__contact {
+  background-image: linear-gradient(83.2deg, #965de9 10.8%, #6358ee 94.3%);
   height: 100vh;
-  background-color: #813B81; }
-  .section__six h3 {
-    padding: 2rem;
-    font-size: 6em;
-    text-align: center;
-    color: #D8D8D8; }
-  .section__six .formulario__container {
-    height: 90vh;
-    padding: 0 2rem;
-    display: flex;
-    flex-direction: column;
+  width: 100%; }
+  .section__contact .form__position {
+    height: 100vh;
     justify-content: center;
     align-items: center; }
-    .section__six .formulario__container .form__content {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      column-gap: 20rem; }
-      .section__six .formulario__container .form__content .form__img {
-        width: 100%;
-        max-width: 45rem; }
-  .section__six .form {
-    padding: 1rem;
-    display: grid;
-    width: 50rem;
-    height: 50rem;
-    gap: 1rem; }
-    .section__six .form .form__input {
-      font-size: 1.8em;
-      padding: 1rem;
-      outline: none;
-      border: none;
-      border: 1px solid #A3A3B4;
-      border-radius: 1rem; }
-      .section__six .form .form__input:focus {
-        border: 1px solid #A3A3B4; }
-    .section__six .form .form__input--message {
+    .section__contact .form__position .form {
+      background-color: #fff;
+      width: 90%;
+      max-width: 40rem;
       border-radius: 1rem;
-      padding: 5rem;
-      resize: none;
-      padding: 2.8em 1.5em;
-      margin-bottom: 1em;
-      font-size: 1.8em; }
-      .section__six .form .form__input--message:focus-visible {
-        outline: 0; }
-  .section__six .form__cta {
-    font-family: inherit;
-    background-color: #A3A3B4;
-    color: #fff;
-    font-size: 2rem;
-    border: none;
-    border-radius: .5rem;
-    border: 1px solid #9D32CF;
-    cursor: pointer;
-    font-weight: 400;
-    transition: all .3s ease-in-out; }
-    .section__six .form__cta:hover {
-      background-color: #606079; }
-
-.gohome {
-  position: fixed;
-  font-size: 5em;
-  bottom: 5rem;
-  right: 5rem;
-  transition: transform .3s ease-in-out; }
-  .gohome:hover {
-    transform: scale(1.1); }
-
-@media (max-width: 920px) {
-  .section__six .formulario__container .form__content {
-    column-gap: 5rem; }
-  .section__six .formulario__container .form__content .form__img {
-    max-width: 35rem; } }
-
-@media (max-width: 640px) {
-  .section__six .form__container {
-    justify-content: center;
-    align-items: center; }
-  .form__img {
-    display: none; } }
-
-@media (max-width: 514px) {
-  .section__six .form {
-    width: 40rem;
-    height: 40rem; }
-  .gohome {
-    bottom: 2rem;
-    right: 2rem;
-    transition: transform .3s ease-in-out; } }
+      padding: 5rem 2rem; }
+      .section__contact .form__position .form .form__container {
+        width: 100%;
+        display: grid;
+        gap: 1rem;
+        grid-auto-columns: 100%;
+        font-family: 'Montserrat', sans-serif; }
+        .section__contact .form__position .form .form__container .form__title {
+          color: #303030;
+          text-align: center;
+          font-size: 5em;
+          margin-bottom: 1rem; }
+        .section__contact .form__position .form .form__container .form__input, .section__contact .form__position .form .form__container .form__message {
+          font-family: inherit;
+          font-size: 1.6em;
+          padding: 1rem 1.6rem;
+          outline: none;
+          border: none;
+          border: 1px solid #9D32CF;
+          border-radius: .5rem; }
+        .section__contact .form__position .form .form__container .form__message {
+          resize: none;
+          padding: 2.5rem 1.5rem; }
+        .section__contact .form__position .form .form__container .form__cta {
+          font-family: 'Montserrat', sans-serif; }
 
 @media (max-width: 380px) {
-  .section__six h3 {
-    font-size: 3em; }
-  .section__six .form .form__input--message {
-    padding: 1em 1.5em; }
-  .section__six .form {
-    width: 32rem;
-    height: 32rem; } }
+  .section__contact .form__position .form .form__container .form__title {
+    font-size: 3em; } }
 
-@media (max-width: 300px) {
-  .section__six .form {
-    width: 25rem;
-    height: 25rem; } }
-
-@media (max-width: 250px) {
-  .section__six .form .form__input {
-    font-size: 1.5em; } }
-
-@media (max-height: 514px) {
-  .section__six .form {
-    height: 30rem; } }
+@media (max-width: 514px) {
+  .gohome {
+    bottom: 2rem;
+    right: 2rem; } }
 
 /* footer */
 .footer {
