--- a/sass/pages/_projects.scss
+++ b/sass/pages/_projects.scss
@@ -4,7 +4,7 @@
 
     & h3 {
         padding: 2rem;
-        font-size: 5em;
+        font-size: $font-title;
         text-align: end;
         color: $color-black;
     }
