--- a/sass/pages/_tecnologies.scss
+++ b/sass/pages/_tecnologies.scss
@@ -8,7 +8,7 @@
         
         .tecnologies__title {
             padding: 2rem;
-            font-size: 5em;
+            font-size: $font-title;
             color: $color-white;
         }
     }
