--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -37,7 +37,7 @@
     & .fa-brands {
         color: $color-white;
         padding: 1rem;
-        font-size: 5em;
+        font-size: $font-title;
         transition: all .3s ease-in-out;
 
         &:hover {
