Formulario_funcional_V10_final

--- a/views/contact.html
+++ b/views/contact.html
@@ -51,12 +51,12 @@
         <section class="section__contact">
             <div class="container">
                 <div class="form__position flex-row" data-aos="fade-right" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-easing="linear">
-                    <form class="form">
+                    <form class="form" action="https://formspree.io/f/xdobpnbv" method="POST">
                         <div class="form__container">
                             <h2 class="form__title">Contáctame</h2>
-                            <input type="text" class="form__input" placeholder="Nombre:">
-                            <input type="email" class="form__input" placeholder="Correo electronico:">
-                            <textarea class="form__message" placeholder="Mensaje:"></textarea>
+                            <input type="text" class="form__input" placeholder="Nombre:" name="name">
+                            <input type="email" class="form__input" placeholder="Correo electronico:" name="email">
+                            <textarea class="form__message" placeholder="Mensaje:" name="message"></textarea>
     
                             <input type="submit" value="Enviar" class="form__cta">
                         </div>
